<resources>
    <!--region common-->
    <string name="app_name">Sales Mobile</string>
    <string name="error">Ошибка</string>
    <string name="error_loading">Ошибка загрузки</string>
    <!--endregion-->

    <!--region settings_screen-->
    <string name="settings_screen_title">Настройки</string>
    <string name="settings_screen_connection_url">Адрес сервера</string>
    <string name="settings_screen_save">Сохранить</string>
    <!--endregion-->

    <!--region login_screen-->
    <string name="login_screen_title">Авторизация</string>
    <string name="login_screen_settings">Настройки</string>
    <string name="login_screen_user_name">Имя пользователя</string>
    <string name="login_screen_password">Пароль</string>
    <string name="login_screen_login">Войти</string>
    <!--endregion-->

    <!--region order_history_screen-->
    <string name="order_history_screen_title">История заказов</string>
    <string name="order_history_screen_search">Поиск</string>
    <string name="order_history_screen_settings">Настройки</string>
    <string name="order_history_screen_filter_customer">Все покупатели</string>
    <string name="order_history_screen_filter_no_documents">Нет документов</string>
    <string name="order_history_screen_filter_no_payment">Нет оплаты</string>
    <string name="order_history_screen_copy">Скопировать</string>
    <string name="order_history_screen_remove">Удалить</string>
    <string name="order_history_screen_remove_confirm_title">Подтверждение удаления</string>
    <string name="order_history_screen_remove_confirm_negative">Отмена</string>
    <string name="order_history_screen_remove_confirm_positive">Удалить</string>
    <string name="order_history_screen_remove_confirm">Удалить заказ \'%1$s\' ?</string>
    <string name="order_history_screen_create">Создать</string>
    <!--endregion-->

    <!--region customers_screen-->
    <string name="customers_screen_title">Покупатели</string>
    <string name="customers_screen_search">Поиск</string>
    <!--endregion-->

    <!--region order_details_screen-->
    <string name="order_details_screen_title">Детали заказа</string>
    <string name="order_details_screen_settings">Настройки</string>
    <string name="order_details_screen_number">Номер</string>
    <string name="order_details_screen_date">Дата</string>
    <string name="order_details_screen_customer">Покупатель</string>
    <string name="order_details_screen_comment">Комментарий</string>
    <string name="order_details_screen_sum">Итого</string>
    <string name="order_details_screen_save">Сохранить</string>
    <string name="order_details_screen_product">Товары</string>
    <string name="order_details_screen_product_add">Добавить</string>
    <string name="order_details_screen_product_number">Количество</string>
    <string name="order_details_screen_product_price">Цена</string>
    <string name="order_details_screen_product_sum">Сумма</string>
    <string name="order_details_screen_copy">Скопировать</string>
    <string name="order_details_screen_copy_confirm_title">Подтверждение копирования</string>
    <string name="order_details_screen_copy_confirm_negative">Отмена</string>
    <string name="order_details_screen_copy_confirm_positive">Скопировать</string>
    <string name="order_details_screen_copy_confirm_without_save">Заказ был изменен. Скопировать без сохранения?</string>
    <string name="order_details_screen_remove">Удалить</string>
    <string name="order_details_screen_remove_confirm_title">Подтверждение удаления</string>
    <string name="order_details_screen_remove_confirm_negative">Отмена</string>
    <string name="order_details_screen_remove_confirm_positive">Удалить</string>
    <string name="order_details_screen_remove_confirm">Удалить заказ?</string>
    <string name="order_details_screen_exit_confirm_title">Подтверждение выхода</string>
    <string name="order_details_screen_exit_confirm_negative">Отмена</string>
    <string name="order_details_screen_exit_confirm_positive">Выйти</string>
    <string name="order_details_screen_exit_confirm_without_save">Заказ был изменен. Выйти без сохранения?</string>
    <!--endregion-->

    <!--region products_screen-->
    <string name="products_screen_title">Товары</string>
    <string name="products_screen_search">Поиск</string>
    <!--endregion-->
</resources>