<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_ios"
            app:title="@string/order_details_screen_title"
            app:titleCentered="true"
            app:menu="@menu/order_details_app_bar" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/header_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/number_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="start"
                    app:expandedHintEnabled="false"
                    android:hint="@string/order_details_screen_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/date_et"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="none"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:textIsSelectable="false"
                        android:background="@android:color/transparent"
                        tools:text="N000346"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="end"
                    app:expandedHintEnabled="false"
                    android:hint="@string/order_details_screen_date"
                    app:layout_constraintStart_toEndOf="@id/number_et"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:maxLines="1"
                        android:inputType="none"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:textIsSelectable="false"
                        android:background="@android:color/transparent"
                        tools:text="28.окт.2022"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/line_dotted"
                android:backgroundTint="?attr/colorOnSurfaceVariant"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:startIconDrawable="@drawable/ic_person"
                app:expandedHintEnabled="false"
                android:hint="@string/order_details_screen_customer">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:textIsSelectable="false"
                    android:background="@android:color/transparent"
                    tools:text="ИП Чукаева Н.А."/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/line_dotted"
                android:backgroundTint="?attr/colorOnSurfaceVariant"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:startIconDrawable="@drawable/ic_comment"
                app:expandedHintEnabled="false"
                android:hint="@string/order_details_screen_comment">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:background="@android:color/transparent"
                    tools:text="Какой-то комментарий"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/line_dotted"
                android:backgroundTint="?attr/colorOnSurfaceVariant"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/completed_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_assignment_turned"
                    app:tint="@android:color/holo_green_dark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <ImageView
                    android:id="@+id/no_payment_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_credit_card_off"
                    app:tint="@android:color/holo_red_dark"
                    app:layout_constraintStart_toEndOf="@id/completed_iv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <ImageView
                    android:id="@+id/no_documents_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_content_paste_off"
                    app:tint="@android:color/holo_red_dark"
                    app:layout_constraintStart_toEndOf="@id/no_payment_iv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sum_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:expandedHintEnabled="false"
                    android:hint="@string/order_details_screen_sum"
                    app:layout_constraintStart_toEndOf="@id/no_documents_iv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:maxLines="1"
                        android:inputType="none"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:textIsSelectable="false"
                        android:background="@android:color/transparent"
                        tools:text="150 000 руб."/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/products_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        android:text="@string/order_details_screen_product"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/header_cv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:id="@+id/products_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/order_details_screen_product_add"
        app:icon="@drawable/ic_add"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="@id/products_tv"
        app:layout_constraintBottom_toBottomOf="@id/products_tv"
        app:layout_constraintStart_toEndOf="@id/products_tv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_srl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/products_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="100dp"
            android:clipToPadding="false"
            tools:listitem="@layout/order_details_product_item"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/order_details_screen_save"
        app:icon="@drawable/ic_done"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1"/>
</androidx.constraintlayout.widget.ConstraintLayout>